templates/blubberoid_template.yaml
---
# Source: blubberoid/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: blubberoid-release-name
  labels:
    app: blubberoid
    chart: blubberoid-0.2.10
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: blubberoid
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 8748
          protocol: TCP
---
# Source: blubberoid/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blubberoid-release-name
  labels:
    app: blubberoid
    chart: blubberoid-0.2.10
    release: release-name
    heritage: Helm
spec:
  type: NodePort
  selector:
    app: blubberoid
    release: release-name
    routed_via: release-name
  ports:
  - name: http
    protocol: TCP
    port: 8748
---
# Source: blubberoid/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blubberoid-release-name
  labels:
    app: blubberoid
    chart: blubberoid-0.2.10
    release: release-name
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: blubberoid
      release: release-name
  replicas: 1
  template:
    metadata:
      labels:
        app: blubberoid
        release: release-name
        routed_via: release-name
    spec:
      containers:
        # The main application container
        - name: blubberoid-release-name
          image: "docker-registry.wikimedia.org/wikimedia/blubber:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8748
          livenessProbe:
            tcpSocket:
              port: 8748
          readinessProbe:
            httpGet:
              path: /?spec
              port: 8748
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 1800m
              memory: 100Mi          
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
               drop:
               - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
---
# Source: blubberoid/templates/tests/test-service-checker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 'blubberoid-release-name-service-checker'
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
spec:
  containers:
  - name: 'blubberoid-release-name-service-checker'
    image: "docker-registry.wikimedia.org/service-checker"
    imagePullPolicy: IfNotPresent
    args: ["-t", "5", '$(BLUBBEROID_RELEASE_NAME_SERVICE_HOST)', 'http://blubberoid-release-name:8748']
  dnsPolicy: ClusterFirst
  restartPolicy: Never
